Still Fixing Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 }
 
 .main-container {
-    padding: 100px 0;
+    padding: 53px 0;
 }
 
 .center {
